[gd_scene load_steps=22 format=2]

[ext_resource path="res://particles/Particles.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/joystix monospace.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/HUD/main_menu/quit_game_button.png" type="Texture" id=3]
[ext_resource path="res://assets/HUD/main_menu/new_game_button.png" type="Texture" id=4]
[ext_resource path="res://assets/HUD/main_menu/new_game_button_hover.png" type="Texture" id=5]
[ext_resource path="res://assets/HUD/main_menu/options_button.png" type="Texture" id=6]
[ext_resource path="res://assets/HUD/main_menu/options_button_hover.png" type="Texture" id=7]
[ext_resource path="res://assets/HUD/main_menu/quit_game_button_hover.png" type="Texture" id=8]
[ext_resource path="res://assets/HUD/main_menu/load_game_button.png" type="Texture" id=9]
[ext_resource path="res://assets/HUD/main_menu/load_game_button_hover.png" type="Texture" id=10]
[ext_resource path="res://assets/HUD/skills/HUD_skill_menu_split_line.png" type="Texture" id=11]
[ext_resource path="res://assets/PARTICLES/particles.png" type="Texture" id=12]
[ext_resource path="res://HUD/MainMenu/MainMenu.gd" type="Script" id=13]
[ext_resource path="res://assets/HUD/main_menu/load_game_button_disabled.png" type="Texture" id=14]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.398323, 1 ), -0.198724, 0.0, 0, 0, Vector2( 0.767296, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 1200, 700, 1 )
flag_disable_z = true
spread = 90.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_random = 0.5
scale_curve = SubResource( 2 )
color = Color( 0.843137, 0.752941, 0.898039, 1 )

[sub_resource type="DynamicFont" id=4]
size = 48
extra_spacing_char = 6
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=7]
resource_name = "DEFAULT"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/MainContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Particles2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.419608, 0.435294, 0.811765, 0 ), Color( 0.419608, 0.435294, 0.811765, 0.403922 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "LOAD_GAME"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/MainContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Particles2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.419608, 0.435294, 0.811765, 0.403922 ), Color( 0.419608, 0.435294, 0.811765, 0 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "load_game"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "NEW_GAME"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/MainContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Particles2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.419608, 0.435294, 0.811765, 0.403922 ), Color( 0.419608, 0.435294, 0.811765, 0 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "new_game"
} ]
}

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 13 )

[node name="Light" type="Sprite" parent="."]
modulate = Color( 0.419608, 0.435294, 0.811765, 0 )
position = Vector2( 320, 170 )
scale = Vector2( 9.12903, 9.90323 )
z_index = 1
texture = ExtResource( 12 )

[node name="Particles2D" parent="." instance=ExtResource( 1 )]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 265, 197 )
z_index = 2
amount = 30
preprocess = 5.0
process_material = SubResource( 3 )

[node name="Background" type="Polygon2D" parent="."]
position = Vector2( 323, 185 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 500, 320, 500, -320, -500, -320, -500, 320 )

[node name="Node2D" type="Node2D" parent="."]
z_index = 2

[node name="MainContainer" type="VBoxContainer" parent="Node2D"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 60.0
margin_right = 640.0
margin_bottom = 360.0
custom_constants/separation = 70

[node name="TitleCenterContainer" type="CenterContainer" parent="Node2D/MainContainer"]
margin_right = 640.0
margin_bottom = 58.0

[node name="Sprite" type="Sprite" parent="Node2D/MainContainer/TitleCenterContainer"]
position = Vector2( 315, 61.7857 )
scale = Vector2( 2.02009, 0.151787 )
texture = ExtResource( 11 )

[node name="Title" type="Label" parent="Node2D/MainContainer/TitleCenterContainer"]
margin_left = 139.0
margin_right = 501.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 4 )
text = "Rpg Game"

[node name="ButtonsCenterContainer" type="CenterContainer" parent="Node2D/MainContainer"]
margin_top = 128.0
margin_right = 640.0
margin_bottom = 242.0

[node name="Buttons" type="VBoxContainer" parent="Node2D/MainContainer/ButtonsCenterContainer"]
margin_left = 215.0
margin_right = 425.0
margin_bottom = 114.0
custom_constants/separation = 6

[node name="NewGameButton" type="TextureButton" parent="Node2D/MainContainer/ButtonsCenterContainer/Buttons"]
margin_right = 210.0
margin_bottom = 24.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="LoadGameButton" type="TextureButton" parent="Node2D/MainContainer/ButtonsCenterContainer/Buttons"]
margin_top = 30.0
margin_right = 210.0
margin_bottom = 54.0
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 10 )
texture_disabled = ExtResource( 14 )

[node name="OptionsButton" type="TextureButton" parent="Node2D/MainContainer/ButtonsCenterContainer/Buttons"]
margin_top = 60.0
margin_right = 210.0
margin_bottom = 84.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )

[node name="QuitGameButton" type="TextureButton" parent="Node2D/MainContainer/ButtonsCenterContainer/Buttons"]
margin_top = 90.0
margin_right = 210.0
margin_bottom = 114.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/DEFAULT = SubResource( 7 )
anims/LOAD_GAME = SubResource( 6 )
anims/NEW_GAME = SubResource( 5 )

[connection signal="pressed" from="Node2D/MainContainer/ButtonsCenterContainer/Buttons/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="Node2D/MainContainer/ButtonsCenterContainer/Buttons/LoadGameButton" to="." method="_on_LoadGameButton_pressed"]
[connection signal="pressed" from="Node2D/MainContainer/ButtonsCenterContainer/Buttons/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Node2D/MainContainer/ButtonsCenterContainer/Buttons/QuitGameButton" to="." method="_on_QuitGameButton_pressed"]
